--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,10 +153,19 @@ h1 {
     padding: 18px 16px;
     list-style: none;
     width: calc(100% / 5);
-    background: #6C757D;
-    border-radius: 5px;
+    background: #1663a1;
+    border-radius: 2rem;
   }
   .weather-cards .card h3 {
-    font-size: 1.3rem;
+    font-size: 2.3rem;
     font-weight: 600;
   }
+
+  .weather-cards .card img {
+  max-width: 80rem;
+  margin: 5px 0 -12px 0;
+}
+
+.weather-cards .card h4 {
+  font-size: 1.6rem;
+}
