added function to create history buttons and access the localstorage to keep a search history based on setitem and getitem. Also added splice method in getweatherdata function where the search history functionality is to create a limit a cap on search items

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,7 @@ h1 {
   }
   .weather-input .history-button {
     background: #6C757D;
+    margin: 4px 
   }
   .weather-input .history-button:hover {
     background: #32383d;
